# RoboDepthBench

PointFlowMatch/: README.md  pyproject.toml
PointFlowMatch/bash/: collect_data.sh  cpu_collect.sh  gpu_collect.sh  install_deps.sh  install_rlbench.sh  start_eval.sh  start_eval_ksteps.sh  start_runs.sh  start_train.sh
PointFlowMatch/conf/: collect_demos_train.yaml  collect_demos_valid.yaml  eval.yaml  train.yaml  trainer_eval.yaml
PointFlowMatch/conf/backbone/: mlp_3dp.yaml  pointmlp.yaml  pointnet.yaml  resnet_dp.yaml  resnet_rgbd.yaml
PointFlowMatch/conf/experiment/: adaflow.yaml  diffusion_policy.yaml  dp3.yaml  pointflowmatch.yaml  pointflowmatch_ddim.yaml  pointflowmatch_images.yaml  pointflowmatch_real.yaml  pointflowmatch_so3.yaml
PointFlowMatch/conf/model/: ddim.yaml  flow.yaml  flow_5p.yaml  flow_se3.yaml  flow_so3.yaml  flow_so3delta.yaml  flow_target.yaml
PointFlowMatch/pfp/: __init__.py
PointFlowMatch/pfp/backbones/: mlp_3dp.py  pointmlp.py  pointnet.py  resnet_dp.py  resnet_rgbd.py
PointFlowMatch/sandbox/: augmentation.py  learning_rate.py  pypose_play.py  state_5p.py  vis_random_traj.py  vis_t_schedule.py  vis_urdf.py
PointFlowMatch/scripts/: collect_demos.py  convert_data.py  evaluate.py  plots.py  print_ablation.py  print_experiments.py  train.py  train_real.py  trainer_eval.py  vis_dataset.py  visualize_saved_dataset.py
PointFlowMatch/toy_circle/: model.py  train_fm_euclid.py  train_fm_euclid_biased.py  train_fm_euclid_biased_inference.py  train_fm_so3.py  train_fm_so3_forward.py  visualize_results.ipynb
(+19 files in other folders)
